# skylight-worker

./: .gitignore  CLEANUP_SUMMARY.md  Dockerfile  LICENSE  README.md  display.sh  pyproject.toml  refresh.sh  requirements.txt  setup.py
docs/: BROWSER_CLEANUP_SOLUTION.md  CLOCK_DRIFT_SOLUTIONS.md  MACOS_SUPERVISOR_ISSUES.md  SUPERVISOR_MULTI_WORKER_GUIDE.md
plugins/chrome_proxy_auth_plugin/: background.js  manifest.json
plugins/chromium_automation/: manifest.json
plugins/chromium_automation/captcha/: awscaptcha.js  geetest.js  lemincaptcha.js  perimeterx.js  recaptcha.js  textcaptcha.js  turnstile.js
plugins/pypasser_plugin/: background.js  config.json  content_main.js  manifest.json  recaptcha_sender.js
scripts/: cleanup_chrome.py  supervisor_macos_clean.sh  worker_wrapper.py
selenium_worker/: __init__.py  app.py  config.py  constants.py  enums.py  exceptions.py  utils.py  vars.py
selenium_worker/Requests/: ComplaintTaskRQ.py  MontgomeryCountyAirParkTaskRQ.py  SubmissionVerificationTaskRQ.py  WorkTaskRQ.py
selenium_worker/Responses/: ComplaintTaskRS.py  MontgomeryCountyAirParkTaskRS.py  WorkTaskRS.py
selenium_worker/Services/: MontgomeryCountyAirParkTask.py  TaskService.py
selenium_worker/pypasser/: __init__.py  exceptions.py  session.py  structs.py  utils.py
selenium_worker/pypasser/reCaptchaV2/: __init__.py  unified_captchav2_solver.py
selenium_worker/pypasser/reCaptchaV3/: __init__.py  constants.py
supervisor/: supervisord.conf
